finish produkht page and fix collapse

--- a/scss/__bootstrap-overrides.scss
+++ b/scss/__bootstrap-overrides.scss
@@ -7,7 +7,7 @@ $grid-breakpoints: (
         xl: 1200px
 ) !default;
 $container-max-widths: (
-        xs: 420px,
+        xs: 430px,
         sm: 540px,
         md: 760px,
         lg: 920px,
@@ -15,7 +15,11 @@ $container-max-widths: (
 ) !default;
 
 a {
-  text-decoration: none;
+  text-decoration: none!important;
+
+  &:hover {
+    text-decoration: none!important;
+  }
 }
 
 @import "bootstrap/bootstrap";
