--- a/scss/main.scss
+++ b/scss/main.scss
@@ -23,6 +23,7 @@ body {
 @import "pages/_nav";
 @import "pages/_home";
 @import "pages/_thesis";
+@import "pages/_product";
 
 
 #mainHeader {
@@ -30,10 +31,10 @@ body {
   font-size: 4.6rem;
   font-family: HelveticaNeue-Light, sans-serif;
   font-weight: unset;
-  @include media-query-768(){
+  @include media-query-768() {
     font-size: 3.5rem;
   }
-  @include media-query-480(){
+  @include media-query-480() {
     font-size: 3rem;
   }
 
@@ -49,10 +50,142 @@ body {
       margin: auto;
       background: $dark-text;
       height: 0.3rem;
-      @include media-query-768(){
+      @include media-query-768() {
         bottom: 0;
       }
     }
   }
 }
 
+.helpContainer {
+  @include flex(row);
+  justify-content: space-around;
+  margin-top: 10rem;
+  @include media-query-768() {
+    flex-direction: column;
+  }
+
+  &__helpText {
+    @include flex(row);
+    justify-content: flex-start;
+    flex-basis: 40%;
+    @include media-query-1024() {
+      flex-basis: 35%;
+    }
+    @include media-query-768() {
+      flex-basis: 100%;
+    }
+
+    h3 {
+      font-size: 3rem;
+      font-family: HelveticaNeue-Light, sans-serif;
+      max-width: 60%;
+      margin: 2rem 0;
+      @include media-query-1024() {
+        max-width: 53%;
+      }
+      @include media-query-768() {
+        max-width: 100%;
+      }
+    }
+  }
+
+  &__expansionContainer {
+    @include flex(column);
+    justify-content: space-between;
+    flex-basis: 60%;
+    @include media-query-1024() {
+      flex-basis: 65%;
+    }
+
+    &__expansion {
+      &__title {
+        font-size: 2rem;
+        font-family: HelveticaNeue-Light, sans-serif;
+        @include flex(row);
+        justify-content: flex-start;
+        position: relative;
+        cursor: pointer;
+
+        p {
+          margin: 3rem 0;
+          font-size: 2rem;
+        }
+
+        &::before {
+          content: '';
+          height: 0.1rem;
+          width: 100%;
+          background: $horizontal_line_baackground;
+          position: absolute;
+          top: 0;
+        }
+
+        svg {
+          margin-top: 3rem;
+        }
+
+        .bi-x {
+          display: none
+        }
+      }
+
+      &__body {
+        font-size: 1.6rem;
+      }
+    }
+
+  }
+}
+.howItWorksContainer {
+  @include flex(row wrap);
+  margin: 10rem 0;
+
+  &__contactUs {
+    flex-basis: 50%;
+    @include media-query-1024() {
+      flex-basis: 35%;
+    }
+    @include media-query-768() {
+      flex-basis: 100%;
+    }
+
+    h4 {
+      font-size: 3rem;
+      font-family: HelveticaNeue-Light, sans-serif;
+      margin-bottom: 5rem;
+    }
+
+    p {
+      font-size: 1.8rem;
+      text-decoration: underline;
+      margin-bottom: 5rem;
+      @include media-query-768() {
+        font-size: 1.6rem;
+      }
+    }
+  }
+
+  &__howItWorks {
+    flex-basis: 50%;
+    padding-left: 10rem;
+    @include media-query-1024() {
+      flex-basis: 65%;
+    }
+    @include media-query-768() {
+      flex-basis: 100%;
+      padding-left: 0;
+    }
+
+    p {
+      font-size: 2rem;
+      margin-bottom: 2rem;
+      @include media-query-1024() {
+        width: 80%;
+      }
+      @include media-query-768() {
+        width: 100%;
+      }
+    }
+  }
+}
