--- a/scss/pages/__home.scss
+++ b/scss/pages/__home.scss
@@ -42,7 +42,6 @@
       margin-right: 2rem;
       margin-bottom: 10rem;
 
-
       img {
         width: 19rem;
         height: 19rem;
@@ -66,6 +65,7 @@
         margin-top: 5rem;
         color: $dark-text;
         padding: 0 1rem;
+        text-decoration: none;
       }
 
       &__description1 {
